--- a/ananyaCSS/index.scss
+++ b/ananyaCSS/index.scss
@@ -1,4 +1,5 @@
-@import 'variables';
+@import 'variables'; //always first
+@import 'base';
 
 body {
     margin: 5%;
@@ -12,11 +13,17 @@ body {
 
 .card {
     padding: 10px;
+    margin: 10px;
     box-shadow: 2px 1px 1px $c1;
     background-color: white;
 
     h6 {
         color: darkblue;
+        font-size: $font-basesize;
+    }
+
+    p {
+        font-size: $font-smallsize;
     }
 
 }
@@ -28,5 +35,6 @@ body {
 div {
     h5 {
         color: red;
+        font-size: $font-medsize;
     }
 }
