--- a/css/index.css
+++ b/css/index.css
@@ -10,11 +10,16 @@ body {
 
 .card {
   padding: 10px;
+  margin: 10px;
   box-shadow: 2px 1px 1px #7cf65e;
   background-color: white;
 }
 .card h6 {
   color: darkblue;
+  font-size: 1rem;
+}
+.card p {
+  font-size: 0.5rem;
 }
 
 .card:hover {
@@ -23,4 +28,5 @@ body {
 
 div h5 {
   color: red;
+  font-size: 1.5rem;
 }
